fixed wrapping, branch complete

--- a/src/app/components/pokemon-evolution/pokemon-evolution.component.css
+++ b/src/app/components/pokemon-evolution/pokemon-evolution.component.css
@@ -143,6 +143,7 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 0.5rem;
+    flex-wrap:wrap;
   }
 
   .branch {
